2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/properties/Makefile.am: Ensure deprecation flags are
	used when compiling the properties plugin.

2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_class_init),
	(bacon_video_widget_properties_init),
	(bacon_video_widget_properties_dispose): Tidy up
	BaconVideoWidgetProperties a little and remove a deprecated GTK+ call.
	(Closes: #572089)

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c (main): When printing
	gallery progress, switch off buffering, and blocking output

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c (create_gallery): Only ever
	print progress when we are asked to do so. Fix filename
	in galleries showing up unescaped when a URI is passed as 
	input

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/totem-plugins-engine.c
	(totem_plugins_engine_load_file): Patch from Philip Withnall
	<philip@tecnocode.co.uk> to allow builtin plugins to be disabled
	when a GConf key exists for them (Closes: #565975)

2009-02-16  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c:
	* src/plugins/properties/bacon-video-widget-properties.h:
	* src/plugins/properties/totem-movie-properties.c
	(totem_movie_properties_plugin_metadata_updated): Patch from
	Robin Stocker <robin@nibor.org> to display metadata again
	after recent changes (Closes: #570830)

2009-02-16  Robin Stocker  <robin@nibor.org>

	reviewed by: Philip Withnall <philip@tecnocode.co.uk>

	* src/backend/bacon-video-widget-gst-0.10.c: Remove unused fields of
	BaconVideoWidgetPrivate (Closes: #571888)

2009-02-12  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_get_metadata_string): Fix possible crasher
	when the string is NULL (Closes: #571480)
