@@ -1,3 +1,8 @@
+2009-02-17  Bastien Nocera  <hadess@hadess.net>
+
+	* src/totem-video-thumbnailer.c (save_pixbuf): Avoid warnings
+	when saving to JPEG format
+
 2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>
 
 	* src/plugins/properties/Makefile.am: Ensure deprecation flags are
